# PolyBench - Project configuration file

# Black code formatter settings
[tool.black]
line-length = 100              # Maximum allowed line length in characters

# isort import sorting settings
[tool.isort]
known_first_party = ["poly_bench_evaluation"]   # Packages that belong to this project

# required for compatibility with black:
profile = "black"              # Use black-compatible import sorting style

# To maintain consistency with other settings
line_length = 100              # Same line length as Black for consistent formatting

# mypy static type checker settings
[tool.mypy]
# See https://mypy.readthedocs.io/en/latest/config_file.html for more mypy options.

# Enables the type-checker on the interior of functions without type annotations.
check_untyped_defs = true

# Displaying specific error codes makes it easier to silence specific errors
# See also https://mypy.readthedocs.io/en/latest/error_codes.html
show_error_codes = true

# Show source code snippets and location markers in error messages
pretty = true

# Suppresses errors about packages which do not implement type-hint sharing.
# See also https://mypy.readthedocs.io/en/latest/running_mypy.html#missing-imports.
ignore_missing_imports = true

# Build system configuration (used by pip)
[build-system]
requires = ["setuptools>=42", "wheel"]   # Required packages to build the project
build-backend = "setuptools.build_meta"  # Build backend to use (setuptools)

# Project metadata (PEP 621)
[project]
name = "poly_bench_evaluation"           # Package name on PyPI
version = "0.1.0"                        # Current version (semantic)
description = "PolyBench Evaluation"     # Short description of the project
requires-python = ">=3.10"               # Minimum Python version required

# Runtime dependencies
dependencies = [
    "docker",                            # Docker SDK for container management
    "pandas",                            # Data analysis and manipulation
    "loguru",                            # Structured logging
    "boto3",                             # AWS SDK (for S3/Hugging Face datasets)
    "pydantic",                          # Data validation with type hints
    "GitPython",                         # Git repository interaction
    "tree-sitter-languages==1.10.2",     # Pre-built tree-sitter language parsers
    "tree-sitter==0.21.3",               # Core tree-sitter parser library
    "scikit-learn==1.3.2",               # Machine learning utilities
    "unidiff",                           # Unified diff parsing
    "whatthepatch",                      # Alternative patch parser
    "datasets"                           # Hugging Face datasets library
]
